Added statement code to UI and updated UI to full width

--- a/server/src/main/resources/org/apache/livy/server/ui/static/html/statements-table.html
+++ b/server/src/main/resources/org/apache/livy/server/ui/static/html/statements-table.html
@@ -27,6 +27,12 @@
     </th>
     <th>
       <span data-toggle="tooltip"
+            title="The statement code to be executed">
+        Execution Code
+      </span>
+    </th>
+    <th>
+      <span data-toggle="tooltip"
             title="Current State (waiting, running, [output] available,
             error, cancelling, cancelled)">
         Execution State
