LIVY-343. Web UI: Create Session Page
[LIVY-343](https://issues.cloudera.org/browse/LIVY-343)

Created a Session Summery Page for Interactive Sessions. Batch Sessions do not have Session Summery Pages because all relevant info is displayed on the All Sessions page Batches table.

The Session Summery Page displays session info (same as in All Sessions table) at the top of the page similar to the Job or Stage Pages in Spark. Below the session info section is a statements table. The statements table contains statement information including statement output. The statement output columns account for empty, error, and data output.

Other new features and updates include:
 - Added a link to the Session Page in the Interactive Sessions table on the All Sessions Page
 - Reorganized static files into a standard directory structure
 - Added bootstrap fonts to fix jQuery DataTables Column headers
 - Added link to the Yarn driver logs to All Sessions tables
 - Updated CSS to use full page width like Spark (was causing issues with statements table)
 - Added a 404 page to the UI

Point of Discussion:
 - Should I change the column order in the Statements table? I played around with it for a while before setting on the current ordering.

Tested manually and passed Livy tests locally.

Screenshots:
![1-empty](https://user-images.githubusercontent.com/13952758/28145846-583eb6ce-672a-11e7-9f03-06f194516e7c.png)
![2-applist](https://user-images.githubusercontent.com/13952758/28145848-5857cb5a-672a-11e7-99a2-098f2c8baf7b.png)
![3-session0](https://user-images.githubusercontent.com/13952758/28145849-585841de-672a-11e7-9236-9d7d814c93c5.png)
![4-session1](https://user-images.githubusercontent.com/13952758/28145851-5859158c-672a-11e7-923b-f59412e7be35.png)
![5-session2](https://user-images.githubusercontent.com/13952758/28145852-585ca418-672a-11e7-9827-2ccafe02689f.png)
![6-session3](https://user-images.githubusercontent.com/13952758/28145850-5858b0b0-672a-11e7-90ee-eef17610080d.png)
![7-se

--- a/server/src/main/resources/org/apache/livy/server/ui/static/html/statements-table.html
+++ b/server/src/main/resources/org/apache/livy/server/ui/static/html/statements-table.html
@@ -15,45 +15,49 @@
  limitations under the License.
 -->
 
-<h4 id="interactive-sessions-header" class="sessions-template">Interactive Sessions</h4>
+<h4 id="statements-header" class="statements-template">Statements</h4>
 
-<table id="interactive-sessions-table"
-       class="table table-striped sessions-table sessions-template">
-  <thead class="sessions-table-head">
+<table id="statements-table" class="table table-striped statements-table statements-template">
+  <thead class="statements-table-head">
   <tr>
-    <th>Session Id</th>
     <th>
-      <span data-toggle="tooltip"
-            title="Spark Application Id for this session.
-            If available, links to Spark Application Web UI">
-        Application Id
-      </span>
-    </th>
-    <th>
-      <span data-toggle="tooltip" title="Remote user who submitted this session">
-        Owner
-      </span>
-    </th>
-    <th>
-      <span data-toggle="tooltip" title="User to impersonate when running">
-        Proxy User
+      <span>
+        Id
       </span>
     </th>
     <th>
       <span data-toggle="tooltip"
-            title="Session kind (spark, pyspark, pyspark3, or sparkr)">
-        Session Kind
+            title="The statement code to be executed">
+        Execution Code
       </span>
     </th>
     <th>
       <span data-toggle="tooltip"
-            title="Session State (not_started, starting, idle, busy,
-            shutting_down, error, dead, success)">
-        State
+            title="Current State (waiting, running, [output] available,
+            error, cancelling, cancelled)">
+        Execution State
+      </span>
+    </th>
+    <th>
+      <span data-toggle="tooltip" title="Percent of known tasks completed">
+        Progress
+      </span>
+    </th>
+    <th>
+      <span data-toggle="tooltip"
+            title="On completion ok or error, blank otherwise">
+        Execution Status
+      </span>
+    </th>
+    <th>
+      <span data-toggle="tooltip"
+            title="Statement output if available (an empty code box means no statement output).
+            Displays error stacktrace in case of an error.">
+        Output
       </span>
     </th>
   </tr>
   </thead>
-  <tbody class="sessions-table-body">
+  <tbody class="statements-table-body">
   </tbody>
 </table>
