add start time and completion time and duration to the statements web ui

--- a/server/src/main/resources/org/apache/livy/server/ui/static/html/statements-table.html
+++ b/server/src/main/resources/org/apache/livy/server/ui/static/html/statements-table.html
@@ -56,6 +56,24 @@
         Output
       </span>
     </th>
+    <th>
+      <span data-toggle="tooltip"
+            title="The statement code of started time">
+        Started
+      </span>
+    </th>
+    <th>
+      <span data-toggle="tooltip"
+            title="The statement code of completed time">
+        Completed
+      </span>
+    </th>
+    <th>
+      <span data-toggle="tooltip"
+            title="The statement code of duration time">
+        Duration
+      </span>
+    </th>
   </tr>
   </thead>
   <tbody class="statements-table-body">
