add_more_info_to_ui

--- a/server/src/main/resources/org/apache/livy/server/ui/static/html/batches-table.html
+++ b/server/src/main/resources/org/apache/livy/server/ui/static/html/batches-table.html
@@ -35,6 +35,22 @@
     </th>
     <th>
       <span data-toggle="tooltip"
+            title="Application name for this session.">
+        Name
+      </span>
+    </th>
+    <th>
+      <span data-toggle="tooltip" title="Remote user who submitted this session">
+        Owner
+      </span>
+    </th>
+    <th>
+      <span data-toggle="tooltip" title="User to impersonate when running">
+        Proxy User
+      </span>
+    </th>
+    <th>
+      <span data-toggle="tooltip"
             title="Session State (not_started, starting, idle, busy,
             shutting_down, error, dead, success)">
         State
