add start time and completion time and duration to the statements web ui

--- a/server/src/main/resources/org/apache/livy/server/ui/static/html/statements-table.html
+++ b/server/src/main/resources/org/apache/livy/server/ui/static/html/statements-table.html
@@ -58,19 +58,19 @@
     </th>
     <th>
       <span data-toggle="tooltip"
-            title="The statement code of started time">
+            title="The start time of statement code">
         Started
       </span>
     </th>
     <th>
       <span data-toggle="tooltip"
-            title="The statement code of completed time">
+            title="The complete time of statement code">
         Completed
       </span>
     </th>
     <th>
       <span data-toggle="tooltip"
-            title="The statement code of duration time">
+            title="The duration time of statement code">
         Duration
       </span>
     </th>
